# pythonocc

./: .gitignore  .project  .pydevproject  AUTHORS  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  INSTALL  README  README.md  TODO  build.sh  gbp.conf
src/contrib/GEOM/: CMakeLists.txt  geom_includes_convert.py
src/contrib/GEOM/inc/: GEOMAlgo_ListOfPnt.hxx  GEOMAlgo_PassKeyShapeMapHasher.hxx  GEOMImpl_I3DSketcher.hxx  GEOMImpl_IBasicOperations.hxx  GEOMImpl_ICone.hxx  GEOMImpl_IFillet.hxx  GEOMImpl_IFilling.hxx  GEOMImpl_IMarker.hxx  GEOMImpl_PolylineDriver.hxx  GEOMImpl_PositionDriver.hxx  GEOM_PythonDump.hxx  Handle_GEOMAlgo_IndexedDataMapNodeOfIndexedDataMapOfPassKeyShapeListOfShape.hxx  Handle_GEOMAlgo_IndexedDataMapNodeOfIndexedDataMapOfShapeShapeInfo.hxx  NMTDS_BoxBndTree.hxx  NMTDS_ListNodeOfListOfPassKey.hxx
src/contrib/GEOM/inc_pythonocc/: GEOMAlgo_BuilderTools.hxx  GEOMAlgo_DataMapNodeOfDataMapOfPassKeyInteger.hxx  GEOMAlgo_DataMapOfShapeReal.hxx  GEOMAlgo_HAlgo.hxx  GEOMAlgo_IndexedDataMapNodeOfIndexedDataMapOfShapeState.hxx  GEOMImpl_Fillet1d.hxx  GEOMImpl_IRevolution.hxx  GEOMImpl_IShapes.hxx  GEOMImpl_TorusDriver.hxx  GEOMImpl_Types.hxx  NMTDS_IteratorCheckerSI.hxx  SGEOM_Application.hxx  SGEOM_DataMapNodeOfDataMapOfAsciiStringTransient.hxx  SGEOM_DataMapOfAsciiStringTransient.hxx
src/contrib/SMESH/: CMakeLists.txt
src/contrib/SMESH/inc/: SMESH_DriverUNV.hxx  SMESH_SMESHDS.hxx  SMESH_StdMeshers.hxx  aptrte.h
src/contrib/geom-5.1.2.7/: CMakeLists.txt  make_geom_pythonocc_compliant.sh
src/contrib/geom-5.1.2.7/inc/: GEOMAlgo_DataMapOfShapeShapeSet.hxx  GEOMImpl_ExportDriver.hxx  GEOMImpl_Gen.hxx  GEOMImpl_HealingDriver.hxx  GEOMImpl_I3DPrimOperations.hxx  GEOMImpl_IBasicOperations.hxx  GEOMImpl_IBlocksOperations.hxx  GEOMImpl_ICircle.hxx  GEOMImpl_ICopy.hxx  GEOMImpl_ICurvesOperations.hxx  GEOMImpl_IEllipse.hxx  GEOMImpl_IHealingOperations.hxx  GEOMImpl_ILocalOperations.hxx  GEOMImpl_IMeasure.hxx  GEOMImpl_IPipe.hxx  GEOMImpl_IPipeBiNormal.hxx  GEOMImpl_IPipeShellSect.hxx  GEOMImpl_IPolyline.hxx  GEOMImpl_IPrism.hxx  GEOMImpl_IShapes.hxx  GEOMImpl_IShapesOperations.hxx  GEOMImpl_ITransformOperations.hxx  GEOMImpl_IVariableFillet.hxx  GEOM_DataMapOfAsciiStringTransient.hxx  GEOM_Engine.hxx  GEOM_Object.hxx  Handle_GEOMAlgo_ClsfSurf.hxx  Handle_GEOMAlgo_DataMapNodeOfDataMapOfPassKeyShapeShape.hxx  NMTDS_IndexRange.hxx  NMTDS_PInterfPool.hxx  NMTTools_ListOfCoupleOfShape.hxx  NMTTools_MapOfPaveBlock.hxx  NMTTools_PaveFiller.hxx  Partition_Loop3d.hxx  ShHealOper_ShapeProcess.hxx
src/contrib/geom-5.1.2.7/inc_pythonocc/: BlockFix_CheckTool.hxx  GEOMAlgo_FinderShapeOn2.hxx  GEOMAlgo_Gluer1.hxx  GEOMAlgo_IndexedDataMapOfShapeShapeInfo.hxx  GEOMAlgo_KindOfName.hxx  GEOMAlgo_ListNodeOfListOfCoupleOfShapes.hxx  GEOMAlgo_Tools3D.hxx  GEOMImpl_Block6Explorer.hxx  GEOMImpl_ConeDriver.hxx  GEOMImpl_I3DPrimOperations.hxx  GEOMImpl_IBasicOperations.hxx  GEOMImpl_IBlocksOperations.hxx  GEOMImpl_ICone.hxx  GEOMImpl_ICurvesOperations.hxx  GEOMImpl_IGroupOperations.hxx  GEOMImpl_IMarker.hxx  GEOMImpl_IMeasureOperations.hxx  GEOMImpl_IPipeBiNormal.hxx  GEOMImpl_IPipeShellSect.hxx  GEOMImpl_ISphere.hxx  GEOMImpl_OffsetDriver.hxx  GEOMImpl_PartitionDriver.hxx  GEOMImpl_ShapeDriver.hxx  GEOMImpl_Types.hxx  Handle_NMTDS_DataMapNodeOfDataMapOfIntegerMapOfInteger.hxx  Handle_NMTDS_StdMapNodeOfMapOfPassKeyBoolean.hxx  NMTTools_Tools.hxx  SGEOM_Application.hxx  SGEOM_Engine.hxx  SGEOM_Function.hxx  SGEOM_ISubShape.hxx  SGEOM_Solver.hxx
src/contrib/geom-5.1.2.7/resources/: GUID.txt
src/contrib/geom-5.1.5.9/: CMakeLists.txt  make_geom_pythonocc_compliant.sh
src/contrib/geom-5.1.5.9/cmake-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/contrib/geom-5.1.5.9/inc/: GEOMAlgo_BuilderShape.hxx  GEOMAlgo_DataMapIteratorOfDataMapOfShapeReal.hxx  GEOMAlgo_DataMapOfRealListOfShape.hxx  GEOMAlgo_IndexedDataMapOfPassKeyListOfShape.hxx  GEOMAlgo_IndexedDataMapOfPassKeyShapeListOfShape.hxx  GEOMAlgo_ShellSolid.hxx  GEOMAlgo_VertexSolid.hxx  GEOMImpl_CurveDriver.hxx  GEOMImpl_Gen.hxx  GEOMImpl_GlueDriver.hxx  GEOMImpl_I3DPrimOperations.hxx  GEOMImpl_IArchimede.hxx  GEOMImpl_IBasicOperations.hxx  GEOMImpl_IBlockTrsf.hxx  GEOMImpl_IBooleanOperations.hxx  GEOMImpl_IChamfer.hxx  GEOMImpl_ICylinder.hxx  GEOMImpl_IDisk.hxx  GEOMImpl_IGlue.hxx  GEOMImpl_IGroupOperations.hxx  GEOMImpl_IImportExport.hxx  GEOMImpl_IInsertOperations.hxx  GEOMImpl_IMeasure.hxx  GEOMImpl_IMeasureOperations.hxx  GEOMImpl_IPlane.hxx  GEOMImpl_IRotate.hxx  GEOMImpl_IShapesOperations.hxx  GEOMImpl_ISketcher.hxx  GEOMImpl_ISphere.hxx  GEOMImpl_ISpline.hxx  GEOMImpl_ITransformOperations.hxx  GEOMImpl_IVector.hxx  GEOMImpl_PipeDriver.hxx  GEOMImpl_Template.hxx  GEOMImpl_ThickSolidDriver.hxx  GEOMImpl_ThruSectionsDriver.hxx  GEOMImpl_Types.hxx  GEOMImpl_VectorDriver.hxx  GEOM_Engine.hxx  GEOM_Function.hxx  (+21 more)
src/contrib/geom-5.1.5.9/inc_pythonocc/: BlockFix.hxx  BlockFix_BlockFixAPI.hxx  BlockFix_UnionFaces.hxx  GEOMAlgo_DataMapIteratorOfDataMapOfOrientedShapeShape.hxx  GEOMAlgo_DataMapIteratorOfDataMapOfPassKeyShapeShape.hxx  GEOMAlgo_DataMapIteratorOfDataMapOfShapeShapeSet.hxx  GEOMAlgo_DataMapNodeOfDataMapOfShapeReal.hxx  GEOMAlgo_DataMapOfPassKeyShapeShape.hxx  GEOMAlgo_KindOfClosed.hxx  GEOMAlgo_ListIteratorOfListOfCoupleOfShapes.hxx  GEOMAlgo_PWireEdgeSet.hxx  GEOMAlgo_ShapeSet.hxx  GEOMAlgo_StateCollector.hxx  GEOMAlgo_Tools3D.hxx  GEOMImpl_ArcDriver.hxx  GEOMImpl_Block6Explorer.hxx  GEOMImpl_Gen.hxx  GEOMImpl_I3DPrimOperations.hxx  GEOMImpl_IBasicOperations.hxx  GEOMImpl_ICurvesOperations.hxx  GEOMImpl_IFillet1d.hxx  GEOMImpl_IHealingOperations.hxx  GEOMImpl_IImportExport.hxx  GEOMImpl_IMeasure.hxx  GEOMImpl_IMeasureOperations.hxx  GEOMImpl_IMirror.hxx  GEOMImpl_IOffset.hxx  GEOMImpl_IShapes.hxx  GEOMImpl_IShapesOperations.hxx  (+18 more)
src/contrib/geom-6.3.1.8/: CMakeLists.txt  README.LINUX
src/contrib/geom-6.5.0-for-oce0.10.0/: CMakeLists.txt  geom_compile.sh
src/contrib/smesh-5.1.2.2/: CMakeLists.txt
src/contrib/smesh-6.5.0-for-oce0.10.0/: CMakeLists.txt  smesh_compile.sh
(+16599 files in other folders)
